--- a/manifest.json
+++ b/manifest.json
@@ -20,7 +20,7 @@
       "scripts": [
         "/background.js"
       ],
-      "persistent": false
+      "persistent": true
     },
 
     "permissions": [
