--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
   "manifest_version": 2,
   "name": "MAD-TS Workslip",
-  "version": "0.1",
+  "version": "0.2",
   "author": "Lucas Schneider",
   "description": "Context menu link to print TS workslips for Madison Central Library of Wisconsin's South Central Library System",
-  "homepage_url": "https://lrschneider.com/mad-ts-workslip",
+  "homepage_url": "https://lrschneider.com/mad-ts-workslip-chrome",
 
   "incognito": "spanning",
 
