--- a/manifest.json
+++ b/manifest.json
@@ -30,8 +30,9 @@
           "https://scls-mad-staff.kohalibrary.com/getit/public/index.html"
         ],
         "js": [
-          "ctrlColonPrint.js"
-        ]
+          "/ctrlColonPrint.js"
+        ],
+        "all_frames": true
       }
     ],
 
